--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,8 @@
 
     // Support super() call.
     "target": "ES6",
-    "module": "CommonJS"
+    "module": "CommonJS",
+    "typeRoots": ["./src/types", "./node_modules/@types"]
   },
 
   "exclude": ["node_modules"]
