--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "fix": "prettier --write . --ignore-path .gitignore && eslint --fix src test --ext .ts",
     "lint": "prettier --ignore-path .gitignore --list-different src && eslint src test --ext .ts",
-    "test": "jest"
+    "start": "ts-node src/index.ts",
+    "test": "jest",
+    "tool:create_starter_game": "ts-node tool/create_starter_game.ts"
   },
   "repository": {
     "type": "git",
@@ -17,7 +19,7 @@
   "license": "MIT",
   "devDependencies": {
     "@types/chance": "^1.1.0",
-    "@types/fs-extra": "^8.1.0",
+    "@types/fs-extra": "^8.1.1",
     "@types/jest": "^25.2.1",
     "@typescript-eslint/eslint-plugin": "^2.30.0",
     "@typescript-eslint/parser": "^2.30.0",
@@ -33,6 +35,8 @@
     "typescript": "^3.8.3"
   },
   "dependencies": {
-    "chance": "^1.1.6"
+    "chance": "^1.1.6",
+    "discord.js": "^12.2.0",
+    "fs-extra": "^9.0.0"
   }
 }
