--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lint": "prettier --ignore-path .gitignore --list-different src && eslint src test --ext .ts",
     "start": "ts-node src/index.ts",
     "test": "jest",
-    "tool:create_starter_game": "ts-node tool/create_starter_game.ts"
+    "tool:repl": "nodemon ./tool/repl.ts"
   },
   "repository": {
     "type": "git",
@@ -29,6 +29,7 @@
     "eslint-plugin-json": "^2.1.1",
     "eslint-plugin-prettier": "^3.1.3",
     "jest": "^25.5.4",
+    "nodemon": "^2.0.4",
     "prettier": "^2.0.5",
     "ts-jest": "^25.4.0",
     "ts-node": "^8.9.1",
@@ -36,7 +37,9 @@
   },
   "dependencies": {
     "chance": "^1.1.6",
+    "commander": "^5.1.0",
     "discord.js": "^12.2.0",
-    "fs-extra": "^9.0.0"
+    "fs-extra": "^9.0.0",
+    "string-argv": "^0.3.1"
   }
 }
