--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/chance": "^1.1.0",
     "@types/fs-extra": "^8.1.1",
     "@types/jest": "^25.2.1",
+    "@types/minimist": "^1.2.0",
     "@typescript-eslint/eslint-plugin": "^2.30.0",
     "@typescript-eslint/parser": "^2.30.0",
     "eslint": "^6.8.0",
@@ -38,10 +39,10 @@
   },
   "dependencies": {
     "chance": "^1.1.6",
-    "commander": "^5.1.0",
     "discord.js": "^12.2.0",
     "fs-extra": "^9.0.0",
     "hook-std": "^2.0.0",
+    "minimist": "^1.2.5",
     "string-argv": "^0.3.1"
   }
 }
