--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "typescript": "^3.8.3"
   },
   "dependencies": {
+    "capital-case": "^1.0.3",
     "chance": "^1.1.6",
     "discord.js": "^12.2.0",
     "fs-extra": "^9.0.0",
