--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "fs-extra": "^9.0.0",
     "hook-std": "^2.0.0",
     "minimist": "^1.2.5",
-    "string-argv": "^0.3.1"
+    "string-argv": "^0.3.1",
+    "ts-mixer": "^5.3.0"
   }
 }
