--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "license": "MIT",
   "devDependencies": {
     "@types/chance": "^1.1.0",
+    "@types/columnify": "^1.5.0",
     "@types/fs-extra": "^8.1.1",
     "@types/jest": "^25.2.1",
     "@types/minimist": "^1.2.0",
@@ -40,6 +41,7 @@
   "dependencies": {
     "capital-case": "^1.0.3",
     "chance": "^1.1.6",
+    "columnify": "^1.5.4",
     "discord.js": "^12.2.0",
     "fs-extra": "^9.0.0",
     "hook-std": "^2.0.0",
