Complete map generation.

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "ts-node src/index.ts",
     "watch": "nodemon src/index.ts",
     "test": "jest",
+    "tool:map": "ts-node ./tool/map.ts",
     "tool:repl": "nodemon ./tool/repl.ts"
   },
   "repository": {
